@@ -1,6 +1,6 @@
 ' DCWatDes.Model.Epanet.loadResultsForStep
 
-' (c) 2000, 2001  DORSCH Consult
+' (c) 2000, 2001, 2005  DORSCH Consult
 ' load the results for the given timestep into the appropriate tables
 
 ' This library is free software; you can redistribute it and/or
@@ -17,7 +17,7 @@
 ' License along with this library; if not, write to the Free Software
 ' Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-' no arguments
+' optional argument strStep to specify the timestep
 ' nothing is returned
 
 av.run("DCWatDes.Model.Epanet.ensureAliases", nil)
@@ -29,14 +29,17 @@ else
   return nil
 end
 
-lstSteps = dicPreferences.get("lstSteps")
-if(lstSteps = nil)then
-  return nil
-end
-
-strStep = MsgBox.choice(lstSteps, "Choose the Timestep to load", "DC Water Design")
+strStep = self
 if(strStep = nil)then
-  return nil
+  lstSteps = dicPreferences.get("lstSteps")
+  if(lstSteps = nil)then
+    return nil
+  end
+  
+  strStep = MsgBox.choice(lstSteps, "Choose the Timestep to load", "DC Water Design")
+  if(strStep = nil)then
+    return nil
+  end
 end
 
 strResultLoader = dicPreferences.get("strResultLoader")
